syntax = "proto3";

import "google/protobuf/empty.proto";

package nina.v1;

option go_package = "github.com/ningenMe/nina-api/proto/gen_go/v1;ninav1";

service NinaService {
  rpc ContributionGet (google.protobuf.Empty) returns (ContributionGetResponse) {}
  rpc ContributionPost (stream ContributionPostRequest) returns (google.protobuf.Empty) {}
  rpc ContributionDelete (ContributionDeleteRequest) returns (google.protobuf.Empty) {}
  rpc ContributionStatisticsGet (ContributionStatisticsGetRequest) returns (ContributionStatisticsGetResponse) {}
}
message Contribution {
  string contributed_at = 1;
  string organization = 2;
  string repository = 3;
  string user = 4;
  string status = 5;
}
message ContributionGetResponse {
  repeated Contribution contribution_list = 1;
}
message ContributionPostRequest {
  repeated Contribution contribution_list = 1;
}
message ContributionDeleteRequest {
  string start_at = 1;
  string end_at = 2;
}
message ContributionSum {
  string date = 1;
  int32 sum = 2;
}
message ContributionStatistics {
  int32 sum = 1;
  repeated ContributionSum contribution_sum_list = 2;
}
message ContributionStatisticsGetRequest {
  string user = 1;
}
message ContributionStatisticsGetResponse {
  ContributionStatistics created_pull_request_statistics = 1;
  ContributionStatistics commented_statistics = 2;
  ContributionStatistics approved_statistics = 3;
}